static/scss/loading_transition.scss
@use 'sass:math';

$centered_width: 200;   // width of the elements in the screen
$loadFromTopX: 40;      // number from the top of the screen
$progressPadding: 8;   // padding between the load animation and the progress

.loading-wrapper {
  height: 100vh;
  z-index: 100000;
  position: absolute;
  width: 100vw;
  background-color: #f8f4d5;
  @include flexbox($direction: column, $alignItems: center, $justifyContent: center, $grow: 1);


  /** Loading line and progress**/
  .loading-line {
    width: 100%;
    max-width: $centered_width + px;
    left: calc(50% - #{math.div($centered-width, 2)}px);
    top: ($loadFromTopX * 1%) + ($progressPadding * 1%) + 20%;
    height: 2px;
    display: inline-block;
    background-color: #dc7878;
    margin-right: 80px;
  }


  .load-value {
    top: ($loadFromTopX * 1%) + ($progressPadding * 1%) + 10%;
    left: calc(50% - #{math.div($centered-width, 2)}px);
    font-size: 150px;
    opacity: .7;
    transform: translateY(5%);
    font-family: Canela;
    font-style: italic;
    color: transparent;
    -webkit-text-stroke-color: #29363C;
    -webkit-text-stroke-width: 1px;
    margin-top: -100px;
  }

  /** Display text **/
  .text-container {
    @include flexbox($direction: column, $alignItems: center, $justifyContent: center);

    .loading-text {
      top: ($loadFromTopX * 1%) + ($progressPadding * 1%) + 25%;
      left: calc(50% - #{math.div($centered-width, 2)}px);
      font-size: 30px;
      font-family: Canela;
      color: #29363C;
    }

    .done-text {
      top: ($loadFromTopX * 1%) + ($progressPadding * 1%) + 25%;
      left: calc(50% - #{math.div($centered-width, 2)}px);
      opacity: 0;
      font-size: 30px;
      font-family: Canela;
      color: map-get(map-get($palettes, red), dark);
      margin-top: -9%;   // to overlap
    }
  }


}

